Aceptar la puja del usuario

--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,12 @@
             <version>${junit.version}</version>
             <scope>test</scope>
         </dependency>
+        <!-- Dependencia de rabbitmq -->
+        <dependency>
+            <groupId>com.rabbitmq</groupId>
+            <artifactId>amqp-client</artifactId>
+            <version>5.20.0</version>
+        </dependency>
     </dependencies>
 
     <build>
